modules/lib/dependencies/libopus/cobalt_opus_shim.h

/**
 * Destroys an encoder created by cobalt_opus_encoder_create.
 *
 * Forwards to opus_encoder_destroy. Must be called at most once per handle. A
 * NULL handle is ignored.
 *
 * @param enc the encoder handle, or NULL.
 */
void cobalt_opus_encoder_destroy(void *enc);
/**
 * Encodes one Opus frame from interleaved signed 16-bit PCM.
 *
 * Forwards to opus_encode. The input holds frameSize samples per channel
 * (frameSize*channels int16 values) and must be one of the Opus frame sizes for
 * the encoder's sampling rate. The compressed packet is written into data, up to
 * maxBytes; the return value is the number of bytes written, which may be 0, 1 or
 * 2 for a discontinuous-transmission or comfort-noise frame that need not be
 * transmitted, or negative on error.
 *
 * @param enc       the encoder handle from cobalt_opus_encoder_create.
 * @param pcm       the interleaved signed 16-bit input signal.
 * @param frameSize the number of samples per channel in pcm.
 * @param data      the output buffer the compressed packet is written into.
 * @param maxBytes  the capacity of data in bytes.
 * @return the encoded packet length in bytes (zero or more) on success, or a
 *         negative libopus error code on failure.
 */
int32_t cobalt_opus_encode(void *enc, const int16_t *pcm, int32_t frameSize, uint8_t *data, int32_t maxBytes);
/**
 * Sets the encoder's target bitrate.
 *
 * Applies OPUS_SET_BITRATE through opus_encoder_ctl. Rates from 500 to 512000
 * bits per second are meaningful, as are COBALT_OPUS_AUTO and
 * COBALT_OPUS_BITRATE_MAX.
 *
 * @param enc        the encoder handle from cobalt_opus_encoder_create.
 * @param bitrateBps the target bitrate in bits per second, or one of
 *                   COBALT_OPUS_AUTO / COBALT_OPUS_BITRATE_MAX.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_bitrate(void *enc, int32_t bitrateBps);
/**
 * Enables or disables variable bitrate.
 *
 * Applies OPUS_SET_VBR through opus_encoder_ctl. The exact VBR type is further
 * controlled by cobalt_opus_encoder_set_vbr_constraint.
 *
 * @param enc the encoder handle from cobalt_opus_encoder_create.
 * @param vbr 1 to enable variable bitrate, 0 for hard constant bitrate.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_vbr(void *enc, int32_t vbr);
/**
 * Enables or disables constrained variable bitrate.
 *
 * Applies OPUS_SET_VBR_CONSTRAINT through opus_encoder_ctl. Ignored while the
 * encoder is in constant-bitrate mode.
 *
 * @param enc        the encoder handle from cobalt_opus_encoder_create.
 * @param constraint 1 for constrained VBR, 0 for unconstrained VBR.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_vbr_constraint(void *enc, int32_t constraint);
/**
 * Sets the encoder's computational complexity.
 *
 * Applies OPUS_SET_COMPLEXITY through opus_encoder_ctl. The supported range is 0
 * to 10 inclusive, with 10 the highest complexity and quality.
 *
 * @param enc        the encoder handle from cobalt_opus_encoder_create.
 * @param complexity the complexity level in the range 0 to 10.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_complexity(void *enc, int32_t complexity);
/**
 * Enables or disables in-band forward error correction.
 *
 * Applies OPUS_SET_INBAND_FEC through opus_encoder_ctl. In-band FEC applies only
 * to the LPC (SILK) layer.
 *
 * @param enc the encoder handle from cobalt_opus_encoder_create.
 * @param fec 0 to disable, 1 to enable (switching to SILK under loss when
 *            beneficial), 2 to enable without forcing SILK for music.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_inband_fec(void *enc, int32_t fec);