modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/audio/codec/opus/bindings/CobaltOpus.java


    /**
     * Address for:
     * {@snippet lang=c :
     * void cobalt_opus_encoder_destroy(void *enc)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_destroy$address() {
        return cobalt_opus_encoder_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void cobalt_opus_encoder_destroy(void *enc)
     * }
     */
    public static void cobalt_opus_encoder_destroy(MemorySegment enc) {
        var mh$ = cobalt_opus_encoder_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_destroy", enc);
            }
            mh$.invokeExact(enc);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encode(void *enc, const int16_t *pcm, int32_t frameSize, uint8_t *data, int32_t maxBytes)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encode$descriptor() {
        return cobalt_opus_encode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encode(void *enc, const int16_t *pcm, int32_t frameSize, uint8_t *data, int32_t maxBytes)
     * }
     */
    public static MethodHandle cobalt_opus_encode$handle() {
        return cobalt_opus_encode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encode(void *enc, const int16_t *pcm, int32_t frameSize, uint8_t *data, int32_t maxBytes)
     * }
     */
    public static MemorySegment cobalt_opus_encode$address() {
        return cobalt_opus_encode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encode(void *enc, const int16_t *pcm, int32_t frameSize, uint8_t *data, int32_t maxBytes)
     * }
     */
    public static int cobalt_opus_encode(MemorySegment enc, MemorySegment pcm, int frameSize, MemorySegment data, int maxBytes) {
        var mh$ = cobalt_opus_encode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encode", enc, pcm, frameSize, data, maxBytes);
            }
            return (int)mh$.invokeExact(enc, pcm, frameSize, data, maxBytes);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_bitrate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_bitrate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_bitrate(void *enc, int32_t bitrateBps)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_bitrate$descriptor() {
        return cobalt_opus_encoder_set_bitrate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_bitrate(void *enc, int32_t bitrateBps)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_bitrate$handle() {
        return cobalt_opus_encoder_set_bitrate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_bitrate(void *enc, int32_t bitrateBps)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_bitrate$address() {
        return cobalt_opus_encoder_set_bitrate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_bitrate(void *enc, int32_t bitrateBps)
     * }
     */
    public static int cobalt_opus_encoder_set_bitrate(MemorySegment enc, int bitrateBps) {
        var mh$ = cobalt_opus_encoder_set_bitrate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_bitrate", enc, bitrateBps);
            }
            return (int)mh$.invokeExact(enc, bitrateBps);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_vbr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_vbr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_vbr(void *enc, int32_t vbr)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_vbr$descriptor() {
        return cobalt_opus_encoder_set_vbr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_vbr(void *enc, int32_t vbr)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_vbr$handle() {
        return cobalt_opus_encoder_set_vbr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_vbr(void *enc, int32_t vbr)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_vbr$address() {
        return cobalt_opus_encoder_set_vbr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_vbr(void *enc, int32_t vbr)
     * }
     */
    public static int cobalt_opus_encoder_set_vbr(MemorySegment enc, int vbr) {
        var mh$ = cobalt_opus_encoder_set_vbr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_vbr", enc, vbr);
            }
            return (int)mh$.invokeExact(enc, vbr);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_vbr_constraint {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_vbr_constraint");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_vbr_constraint(void *enc, int32_t constraint)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_vbr_constraint$descriptor() {
        return cobalt_opus_encoder_set_vbr_constraint.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_vbr_constraint(void *enc, int32_t constraint)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_vbr_constraint$handle() {
        return cobalt_opus_encoder_set_vbr_constraint.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_vbr_constraint(void *enc, int32_t constraint)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_vbr_constraint$address() {
        return cobalt_opus_encoder_set_vbr_constraint.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_vbr_constraint(void *enc, int32_t constraint)
     * }
     */
    public static int cobalt_opus_encoder_set_vbr_constraint(MemorySegment enc, int constraint) {
        var mh$ = cobalt_opus_encoder_set_vbr_constraint.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_vbr_constraint", enc, constraint);
            }
            return (int)mh$.invokeExact(enc, constraint);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_complexity {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_complexity");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_complexity(void *enc, int32_t complexity)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_complexity$descriptor() {
        return cobalt_opus_encoder_set_complexity.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_complexity(void *enc, int32_t complexity)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_complexity$handle() {
        return cobalt_opus_encoder_set_complexity.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_complexity(void *enc, int32_t complexity)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_complexity$address() {
        return cobalt_opus_encoder_set_complexity.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_complexity(void *enc, int32_t complexity)
     * }
     */
    public static int cobalt_opus_encoder_set_complexity(MemorySegment enc, int complexity) {
        var mh$ = cobalt_opus_encoder_set_complexity.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_complexity", enc, complexity);
            }
            return (int)mh$.invokeExact(enc, complexity);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_inband_fec {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_inband_fec");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_inband_fec(void *enc, int32_t fec)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_inband_fec$descriptor() {
        return cobalt_opus_encoder_set_inband_fec.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_inband_fec(void *enc, int32_t fec)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_inband_fec$handle() {
        return cobalt_opus_encoder_set_inband_fec.HANDLE;
    }
